parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SIMPLEQUOTES
    VARS

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON declara_vars program_modules
Rule 2     program_modules -> program_fun star
Rule 3     program_fun -> function program_fun
Rule 4     program_fun -> empty
Rule 5     star -> starI declara_vars star1 CLOSEBRACES
Rule 6     starI -> star_sign OPENBRACES
Rule 7     star_sign -> MULTIPLICATION
Rule 8     star1 -> stmt star1
Rule 9     star1 -> empty
Rule 10    declara_vars -> vars declara_vars
Rule 11    declara_vars -> empty
Rule 12    vars -> type ID vars1 equals exp SEMICOLON
Rule 13    vars -> type ID vars1 SEMICOLON
Rule 14    vars1 -> OPENBRACKET CTEINT CLOSEBRACKET vars3
Rule 15    vars1 -> empty
Rule 16    vars3 -> OPENBRACKET CTEINT CLOSEBRACKET
Rule 17    vars3 -> empty
Rule 18    loop -> while
Rule 19    loop -> for
Rule 20    stmt -> assignment
Rule 21    stmt -> condition
Rule 22    stmt -> print
Rule 23    stmt -> loop
Rule 24    stmt -> read
Rule 25    stmt -> graphstmt
Rule 26    stmt -> graphr
Rule 27    stmt -> funCall SEMICOLON
Rule 28    stmt -> return
Rule 29    functionI -> type ID
Rule 30    functionI -> VOID ID
Rule 31    function -> FUN functionI function2 inicia_fun declara_vars function4 termina_fun
Rule 32    inicia_fun -> OPENBRACES
Rule 33    termina_fun -> CLOSEBRACES
Rule 34    function2 -> OPENPAREN function3 CLOSEPAREN
Rule 35    function3 -> type ID function5
Rule 36    function3 -> empty
Rule 37    function4 -> stmt function4
Rule 38    function4 -> empty
Rule 39    function5 -> COMMA type ID function5
Rule 40    function5 -> empty
Rule 41    type -> INT
Rule 42    type -> FLOAT
Rule 43    type -> CHAR
Rule 44    print -> PRINT OPENPAREN expression CLOSEPAREN SEMICOLON
Rule 45    read -> READ OPENPAREN id read1 CLOSEPAREN SEMICOLON
Rule 46    read1 -> OPENBRACKET exp CLOSEBRACKET OPENBRACKET exp CLOSEBRACKET
Rule 47    read1 -> OPENBRACKET exp CLOSEBRACKET
Rule 48    read1 -> empty
Rule 49    equals -> EQUALS
Rule 50    id -> ID
Rule 51    assignment -> id assignment1 equals assignment3 SEMICOLON
Rule 52    assignment1 -> assignment2
Rule 53    assignment1 -> assignment2 assignment1
Rule 54    assignment1 -> empty
Rule 55    assignment2 -> OPENBRACKET exp CLOSEBRACKET
Rule 56    assignment3 -> exp
Rule 57    assignment3 -> read
Rule 58    vcte -> cte_int
Rule 59    vcte -> cte_float
Rule 60    vcte -> cte_char
Rule 61    vcte -> id vcte1
Rule 62    vcte -> funCall
Rule 63    vcte1 -> OPENBRACKET exp CLOSEBRACKET vcte3
Rule 64    vcte1 -> empty
Rule 65    vcte3 -> OPENBRACKET exp CLOSEBRACKET
Rule 66    vcte3 -> empty
Rule 67    cte_int -> CTEINT
Rule 68    cte_float -> CTEFLOAT
Rule 69    cte_char -> CTECHAR
Rule 70    return -> RETURN return1 SEMICOLON
Rule 71    return1 -> vcte
Rule 72    return1 -> exp
Rule 73    expression -> exp expression1
Rule 74    expression1 -> loper exp
Rule 75    expression1 -> empty
Rule 76    loper -> GREATER
Rule 77    loper -> LESS
Rule 78    loper -> NOTEQUAL
Rule 79    loper -> ISEQUAL
Rule 80    condition -> IF head_cond body condition1
Rule 81    condition1 -> elseif head_cond body condition1
Rule 82    condition1 -> else body
Rule 83    condition1 -> empty
Rule 84    elseif -> ELSEIF
Rule 85    else -> ELSE
Rule 86    head_cond -> OPENPAREN expression close_condition
Rule 87    body -> OPENBRACES body1 CLOSEBRACES
Rule 88    close_condition -> CLOSEPAREN
Rule 89    body1 -> stmt body1
Rule 90    body1 -> empty
Rule 91    for -> FOR OPENPAREN ID TWODOTS exp CLOSEPAREN body
Rule 92    while -> while1 body
Rule 93    while1 -> while_w OPENPAREN expression CLOSEPAREN
Rule 94    while_w -> WHILE
Rule 95    funCall -> ID OPENPAREN funCall2 CLOSEPAREN
Rule 96    funCall2 -> exp funCall3
Rule 97    funCall2 -> empty
Rule 98    funCall3 -> COMMA exp funCall2
Rule 99    funCall3 -> empty
Rule 100   dosExp -> OPENPAREN exp COMMA exp CLOSEPAREN
Rule 101   unaExp -> OPENPAREN exp CLOSEPAREN
Rule 102   graphstmt -> graphfig
Rule 103   graphstmt -> graphview
Rule 104   graphstmt -> graphmove
Rule 105   graphfig -> graphfig1 SEMICOLON
Rule 106   graphfig -> graphfig2 SEMICOLON
Rule 107   graphfig1 -> CIRCLE unaExp
Rule 108   graphfig1 -> SQUARE unaExp
Rule 109   graphfig2 -> TRIANGLE dosExp
Rule 110   graphfig2 -> RECTANGLE dosExp
Rule 111   graphmove -> graphmove0 SEMICOLON
Rule 112   graphmove -> graphmove1 SEMICOLON
Rule 113   graphmove -> graphmove2 SEMICOLON
Rule 114   graphmove0 -> HAND_DOWN
Rule 115   graphmove0 -> HAND_UP
Rule 116   graphmove1 -> GO unaExp
Rule 117   graphmove1 -> LEFT unaExp
Rule 118   graphmove1 -> RIGHT unaExp
Rule 119   graphmove1 -> BACK unaExp
Rule 120   graphmove2 -> ARC dosExp
Rule 121   graphr -> repeat rep OPENBRACES graphstmt graphr1 CLOSEBRACES
Rule 122   graphr1 -> graphstmt graphr1
Rule 123   graphr1 -> empty
Rule 124   rep -> OPENPAREN exp CLOSEPAREN
Rule 125   repeat -> REPEAT
Rule 126   graphview -> graphview0 SEMICOLON
Rule 127   graphview -> graphview1 SEMICOLON
Rule 128   graphview -> graphview2 SEMICOLON
Rule 129   graphview0 -> HIDE_STAR
Rule 130   graphview0 -> SHOW_STAR
Rule 131   graphview1 -> COLOR_STAR unaExp
Rule 132   graphview1 -> SIZE_STAR unaExp
Rule 133   graphview2 -> SETXY dosExp
Rule 134   exp -> term exp1
Rule 135   exp1 -> ADDITION exp
Rule 136   exp1 -> SUBSTRACTION exp
Rule 137   exp1 -> empty
Rule 138   openP -> OPENPAREN
Rule 139   closeP -> CLOSEPAREN
Rule 140   factor -> vcte
Rule 141   factor -> factor1
Rule 142   factor1 -> factor2 vcte
Rule 143   factor1 -> openP expression closeP
Rule 144   factor2 -> ADDITION
Rule 145   factor2 -> SUBSTRACTION
Rule 146   term -> factor term1
Rule 147   term1 -> MULTIPLICATION term
Rule 148   term1 -> DIVISION term
Rule 149   term1 -> empty
Rule 150   empty -> <empty>

Terminals, with rules where they appear

ADDITION             : 135 144
ARC                  : 120
BACK                 : 119
CHAR                 : 43
CIRCLE               : 107
CLOSEBRACES          : 5 33 87 121
CLOSEBRACKET         : 14 16 46 46 47 55 63 65
CLOSEPAREN           : 34 44 45 88 91 93 95 100 101 124 139
COLOR_STAR           : 131
COMMA                : 39 98 100
CTECHAR              : 69
CTEFLOAT             : 68
CTEINT               : 14 16 67
DIVISION             : 148
ELSE                 : 85
ELSEIF               : 84
EQUALS               : 49
FLOAT                : 42
FOR                  : 91
FUN                  : 31
GO                   : 116
GREATER              : 76
HAND_DOWN            : 114
HAND_UP              : 115
HIDE_STAR            : 129
ID                   : 1 12 13 29 30 35 39 50 91 95
IF                   : 80
INT                  : 41
ISEQUAL              : 79
LEFT                 : 117
LESS                 : 77
MULTIPLICATION       : 7 147
NOTEQUAL             : 78
OPENBRACES           : 6 32 87 121
OPENBRACKET          : 14 16 46 46 47 55 63 65
OPENPAREN            : 34 44 45 86 91 93 95 100 101 124 138
PRINT                : 44
PROGRAM              : 1
READ                 : 45
RECTANGLE            : 110
REPEAT               : 125
RETURN               : 70
RIGHT                : 118
SEMICOLON            : 1 12 13 27 44 45 51 70 105 106 111 112 113 126 127 128
SETXY                : 133
SHOW_STAR            : 130
SIMPLEQUOTES         : 
SIZE_STAR            : 132
SQUARE               : 108
SUBSTRACTION         : 136 145
TRIANGLE             : 109
TWODOTS              : 91
VARS                 : 
VOID                 : 30
WHILE                : 94
error                : 

Nonterminals, with rules where they appear

assignment           : 20
assignment1          : 51 53
assignment2          : 52 53
assignment3          : 51
body                 : 80 81 82 91 92
body1                : 87 89
closeP               : 143
close_condition      : 86
condition            : 21
condition1           : 80 81
cte_char             : 60
cte_float            : 59
cte_int              : 58
declara_vars         : 1 5 10 31
dosExp               : 109 110 120 133
else                 : 82
elseif               : 81
empty                : 4 9 11 15 17 36 38 40 48 54 64 66 75 83 90 97 99 123 137 149
equals               : 12 51
exp                  : 12 46 46 47 55 56 63 65 72 73 74 91 96 98 100 100 101 124 135 136
exp1                 : 134
expression           : 44 86 93 143
expression1          : 73
factor               : 146
factor1              : 141
factor2              : 142
for                  : 19
funCall              : 27 62
funCall2             : 95 98
funCall3             : 96
function             : 3
function2            : 31
function3            : 34
function4            : 31 37
function5            : 35 39
functionI            : 31
graphfig             : 102
graphfig1            : 105
graphfig2            : 106
graphmove            : 104
graphmove0           : 111
graphmove1           : 112
graphmove2           : 113
graphr               : 26
graphr1              : 121 122
graphstmt            : 25 121 122
graphview            : 103
graphview0           : 126
graphview1           : 127
graphview2           : 128
head_cond            : 80 81
id                   : 45 51 61
inicia_fun           : 31
loop                 : 23
loper                : 74
openP                : 143
print                : 22
program              : 0
program_fun          : 2 3
program_modules      : 1
read                 : 24 57
read1                : 45
rep                  : 121
repeat               : 121
return               : 28
return1              : 70
star                 : 2
star1                : 5 8
starI                : 5
star_sign            : 6
stmt                 : 8 37 89
term                 : 134 147 148
term1                : 146
termina_fun          : 31
type                 : 12 13 29 35 39
unaExp               : 107 108 116 117 118 119 131 132
vars                 : 10
vars1                : 12 13
vars3                : 14
vcte                 : 71 140 142
vcte1                : 61
vcte3                : 63
while                : 18
while1               : 92
while_w              : 93

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON declara_vars program_modules

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON declara_vars program_modules

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON declara_vars program_modules

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . declara_vars program_modules
    (10) declara_vars -> . vars declara_vars
    (11) declara_vars -> . empty
    (12) vars -> . type ID vars1 equals exp SEMICOLON
    (13) vars -> . type ID vars1 SEMICOLON
    (150) empty -> .
    (41) type -> . INT
    (42) type -> . FLOAT
    (43) type -> . CHAR

    FUN             reduce using rule 150 (empty -> .)
    MULTIPLICATION  reduce using rule 150 (empty -> .)
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11

    declara_vars                   shift and go to state 5
    vars                           shift and go to state 6
    empty                          shift and go to state 7
    type                           shift and go to state 8

state 5

    (1) program -> PROGRAM ID SEMICOLON declara_vars . program_modules
    (2) program_modules -> . program_fun star
    (3) program_fun -> . function program_fun
    (4) program_fun -> . empty
    (31) function -> . FUN functionI function2 inicia_fun declara_vars function4 termina_fun
    (150) empty -> .

    FUN             shift and go to state 16
    MULTIPLICATION  reduce using rule 150 (empty -> .)

    program_modules                shift and go to state 12
    program_fun                    shift and go to state 13
    function                       shift and go to state 14
    empty                          shift and go to state 15

state 6

    (10) declara_vars -> vars . declara_vars
    (10) declara_vars -> . vars declara_vars
    (11) declara_vars -> . empty
    (12) vars -> . type ID vars1 equals exp SEMICOLON
    (13) vars -> . type ID vars1 SEMICOLON
    (150) empty -> .
    (41) type -> . INT
    (42) type -> . FLOAT
    (43) type -> . CHAR

    FUN             reduce using rule 150 (empty -> .)
    MULTIPLICATION  reduce using rule 150 (empty -> .)
    IF              reduce using rule 150 (empty -> .)
    PRINT           reduce using rule 150 (empty -> .)
    READ            reduce using rule 150 (empty -> .)
    ID              reduce using rule 150 (empty -> .)
    RETURN          reduce using rule 150 (empty -> .)
    FOR             reduce using rule 150 (empty -> .)
    REPEAT          reduce using rule 150 (empty -> .)
    CIRCLE          reduce using rule 150 (empty -> .)
    SQUARE          reduce using rule 150 (empty -> .)
    TRIANGLE        reduce using rule 150 (empty -> .)
    RECTANGLE       reduce using rule 150 (empty -> .)
    HIDE_STAR       reduce using rule 150 (empty -> .)
    SHOW_STAR       reduce using rule 150 (empty -> .)
    COLOR_STAR      reduce using rule 150 (empty -> .)
    SIZE_STAR       reduce using rule 150 (empty -> .)
    SETXY           reduce using rule 150 (empty -> .)
    HAND_DOWN       reduce using rule 150 (empty -> .)
    HAND_UP         reduce using rule 150 (empty -> .)
    GO              reduce using rule 150 (empty -> .)
    LEFT            reduce using rule 150 (empty -> .)
    RIGHT           reduce using rule 150 (empty -> .)
    BACK            reduce using rule 150 (empty -> .)
    ARC             reduce using rule 150 (empty -> .)
    WHILE           reduce using rule 150 (empty -> .)
    CLOSEBRACES     reduce using rule 150 (empty -> .)
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11

    vars                           shift and go to state 6
    declara_vars                   shift and go to state 17
    empty                          shift and go to state 7
    type                           shift and go to state 8

state 7

    (11) declara_vars -> empty .

    FUN             reduce using rule 11 (declara_vars -> empty .)
    MULTIPLICATION  reduce using rule 11 (declara_vars -> empty .)
    IF              reduce using rule 11 (declara_vars -> empty .)
    PRINT           reduce using rule 11 (declara_vars -> empty .)
    READ            reduce using rule 11 (declara_vars -> empty .)
    ID              reduce using rule 11 (declara_vars -> empty .)
    RETURN          reduce using rule 11 (declara_vars -> empty .)
    FOR             reduce using rule 11 (declara_vars -> empty .)
    REPEAT          reduce using rule 11 (declara_vars -> empty .)
    CIRCLE          reduce using rule 11 (declara_vars -> empty .)
    SQUARE          reduce using rule 11 (declara_vars -> empty .)
    TRIANGLE        reduce using rule 11 (declara_vars -> empty .)
    RECTANGLE       reduce using rule 11 (declara_vars -> empty .)
    HIDE_STAR       reduce using rule 11 (declara_vars -> empty .)
    SHOW_STAR       reduce using rule 11 (declara_vars -> empty .)
    COLOR_STAR      reduce using rule 11 (declara_vars -> empty .)
    SIZE_STAR       reduce using rule 11 (declara_vars -> empty .)
    SETXY           reduce using rule 11 (declara_vars -> empty .)
    HAND_DOWN       reduce using rule 11 (declara_vars -> empty .)
    HAND_UP         reduce using rule 11 (declara_vars -> empty .)
    GO              reduce using rule 11 (declara_vars -> empty .)
    LEFT            reduce using rule 11 (declara_vars -> empty .)
    RIGHT           reduce using rule 11 (declara_vars -> empty .)
    BACK            reduce using rule 11 (declara_vars -> empty .)
    ARC             reduce using rule 11 (declara_vars -> empty .)
    WHILE           reduce using rule 11 (declara_vars -> empty .)
    CLOSEBRACES     reduce using rule 11 (declara_vars -> empty .)


state 8

    (12) vars -> type . ID vars1 equals exp SEMICOLON
    (13) vars -> type . ID vars1 SEMICOLON

    ID              shift and go to state 18


state 9

    (41) type -> INT .

    ID              reduce using rule 41 (type -> INT .)


state 10

    (42) type -> FLOAT .

    ID              reduce using rule 42 (type -> FLOAT .)


state 11

    (43) type -> CHAR .

    ID              reduce using rule 43 (type -> CHAR .)


state 12

    (1) program -> PROGRAM ID SEMICOLON declara_vars program_modules .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON declara_vars program_modules .)


state 13

    (2) program_modules -> program_fun . star
    (5) star -> . starI declara_vars star1 CLOSEBRACES
    (6) starI -> . star_sign OPENBRACES
    (7) star_sign -> . MULTIPLICATION

    MULTIPLICATION  shift and go to state 22

    star                           shift and go to state 19
    starI                          shift and go to state 20
    star_sign                      shift and go to state 21

state 14

    (3) program_fun -> function . program_fun
    (3) program_fun -> . function program_fun
    (4) program_fun -> . empty
    (31) function -> . FUN functionI function2 inicia_fun declara_vars function4 termina_fun
    (150) empty -> .

    FUN             shift and go to state 16
    MULTIPLICATION  reduce using rule 150 (empty -> .)

    function                       shift and go to state 14
    program_fun                    shift and go to state 23
    empty                          shift and go to state 15

state 15

    (4) program_fun -> empty .

    MULTIPLICATION  reduce using rule 4 (program_fun -> empty .)


state 16

    (31) function -> FUN . functionI function2 inicia_fun declara_vars function4 termina_fun
    (29) functionI -> . type ID
    (30) functionI -> . VOID ID
    (41) type -> . INT
    (42) type -> . FLOAT
    (43) type -> . CHAR

    VOID            shift and go to state 26
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11

    functionI                      shift and go to state 24
    type                           shift and go to state 25

state 17

    (10) declara_vars -> vars declara_vars .

    FUN             reduce using rule 10 (declara_vars -> vars declara_vars .)
    MULTIPLICATION  reduce using rule 10 (declara_vars -> vars declara_vars .)
    IF              reduce using rule 10 (declara_vars -> vars declara_vars .)
    PRINT           reduce using rule 10 (declara_vars -> vars declara_vars .)
    READ            reduce using rule 10 (declara_vars -> vars declara_vars .)
    ID              reduce using rule 10 (declara_vars -> vars declara_vars .)
    RETURN          reduce using rule 10 (declara_vars -> vars declara_vars .)
    FOR             reduce using rule 10 (declara_vars -> vars declara_vars .)
    REPEAT          reduce using rule 10 (declara_vars -> vars declara_vars .)
    CIRCLE          reduce using rule 10 (declara_vars -> vars declara_vars .)
    SQUARE          reduce using rule 10 (declara_vars -> vars declara_vars .)
    TRIANGLE        reduce using rule 10 (declara_vars -> vars declara_vars .)
    RECTANGLE       reduce using rule 10 (declara_vars -> vars declara_vars .)
    HIDE_STAR       reduce using rule 10 (declara_vars -> vars declara_vars .)
    SHOW_STAR       reduce using rule 10 (declara_vars -> vars declara_vars .)
    COLOR_STAR      reduce using rule 10 (declara_vars -> vars declara_vars .)
    SIZE_STAR       reduce using rule 10 (declara_vars -> vars declara_vars .)
    SETXY           reduce using rule 10 (declara_vars -> vars declara_vars .)
    HAND_DOWN       reduce using rule 10 (declara_vars -> vars declara_vars .)
    HAND_UP         reduce using rule 10 (declara_vars -> vars declara_vars .)
    GO              reduce using rule 10 (declara_vars -> vars declara_vars .)
    LEFT            reduce using rule 10 (declara_vars -> vars declara_vars .)
    RIGHT           reduce using rule 10 (declara_vars -> vars declara_vars .)
    BACK            reduce using rule 10 (declara_vars -> vars declara_vars .)
    ARC             reduce using rule 10 (declara_vars -> vars declara_vars .)
    WHILE           reduce using rule 10 (declara_vars -> vars declara_vars .)
    CLOSEBRACES     reduce using rule 10 (declara_vars -> vars declara_vars .)


state 18

    (12) vars -> type ID . vars1 equals exp SEMICOLON
    (13) vars -> type ID . vars1 SEMICOLON
    (14) vars1 -> . OPENBRACKET CTEINT CLOSEBRACKET vars3
    (15) vars1 -> . empty
    (150) empty -> .

    OPENBRACKET     shift and go to state 28
    SEMICOLON       reduce using rule 150 (empty -> .)
    EQUALS          reduce using rule 150 (empty -> .)

    vars1                          shift and go to state 27
    empty                          shift and go to state 29

state 19

    (2) program_modules -> program_fun star .

    $end            reduce using rule 2 (program_modules -> program_fun star .)


state 20

    (5) star -> starI . declara_vars star1 CLOSEBRACES
    (10) declara_vars -> . vars declara_vars
    (11) declara_vars -> . empty
    (12) vars -> . type ID vars1 equals exp SEMICOLON
    (13) vars -> . type ID vars1 SEMICOLON
    (150) empty -> .
    (41) type -> . INT
    (42) type -> . FLOAT
    (43) type -> . CHAR

    IF              reduce using rule 150 (empty -> .)
    PRINT           reduce using rule 150 (empty -> .)
    READ            reduce using rule 150 (empty -> .)
    ID              reduce using rule 150 (empty -> .)
    RETURN          reduce using rule 150 (empty -> .)
    FOR             reduce using rule 150 (empty -> .)
    REPEAT          reduce using rule 150 (empty -> .)
    CIRCLE          reduce using rule 150 (empty -> .)
    SQUARE          reduce using rule 150 (empty -> .)
    TRIANGLE        reduce using rule 150 (empty -> .)
    RECTANGLE       reduce using rule 150 (empty -> .)
    HIDE_STAR       reduce using rule 150 (empty -> .)
    SHOW_STAR       reduce using rule 150 (empty -> .)
    COLOR_STAR      reduce using rule 150 (empty -> .)
    SIZE_STAR       reduce using rule 150 (empty -> .)
    SETXY           reduce using rule 150 (empty -> .)
    HAND_DOWN       reduce using rule 150 (empty -> .)
    HAND_UP         reduce using rule 150 (empty -> .)
    GO              reduce using rule 150 (empty -> .)
    LEFT            reduce using rule 150 (empty -> .)
    RIGHT           reduce using rule 150 (empty -> .)
    BACK            reduce using rule 150 (empty -> .)
    ARC             reduce using rule 150 (empty -> .)
    WHILE           reduce using rule 150 (empty -> .)
    CLOSEBRACES     reduce using rule 150 (empty -> .)
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11

    declara_vars                   shift and go to state 30
    vars                           shift and go to state 6
    empty                          shift and go to state 7
    type                           shift and go to state 8

state 21

    (6) starI -> star_sign . OPENBRACES

    OPENBRACES      shift and go to state 31


state 22

    (7) star_sign -> MULTIPLICATION .

    OPENBRACES      reduce using rule 7 (star_sign -> MULTIPLICATION .)


state 23

    (3) program_fun -> function program_fun .

    MULTIPLICATION  reduce using rule 3 (program_fun -> function program_fun .)


state 24

    (31) function -> FUN functionI . function2 inicia_fun declara_vars function4 termina_fun
    (34) function2 -> . OPENPAREN function3 CLOSEPAREN

    OPENPAREN       shift and go to state 33

    function2                      shift and go to state 32

state 25

    (29) functionI -> type . ID

    ID              shift and go to state 34


state 26

    (30) functionI -> VOID . ID

    ID              shift and go to state 35


state 27

    (12) vars -> type ID vars1 . equals exp SEMICOLON
    (13) vars -> type ID vars1 . SEMICOLON
    (49) equals -> . EQUALS

    SEMICOLON       shift and go to state 37
    EQUALS          shift and go to state 38

    equals                         shift and go to state 36

state 28

    (14) vars1 -> OPENBRACKET . CTEINT CLOSEBRACKET vars3

    CTEINT          shift and go to state 39


state 29

    (15) vars1 -> empty .

    SEMICOLON       reduce using rule 15 (vars1 -> empty .)
    EQUALS          reduce using rule 15 (vars1 -> empty .)


state 30

    (5) star -> starI declara_vars . star1 CLOSEBRACES
    (8) star1 -> . stmt star1
    (9) star1 -> . empty
    (20) stmt -> . assignment
    (21) stmt -> . condition
    (22) stmt -> . print
    (23) stmt -> . loop
    (24) stmt -> . read
    (25) stmt -> . graphstmt
    (26) stmt -> . graphr
    (27) stmt -> . funCall SEMICOLON
    (28) stmt -> . return
    (150) empty -> .
    (51) assignment -> . id assignment1 equals assignment3 SEMICOLON
    (80) condition -> . IF head_cond body condition1
    (44) print -> . PRINT OPENPAREN expression CLOSEPAREN SEMICOLON
    (18) loop -> . while
    (19) loop -> . for
    (45) read -> . READ OPENPAREN id read1 CLOSEPAREN SEMICOLON
    (102) graphstmt -> . graphfig
    (103) graphstmt -> . graphview
    (104) graphstmt -> . graphmove
    (121) graphr -> . repeat rep OPENBRACES graphstmt graphr1 CLOSEBRACES
    (95) funCall -> . ID OPENPAREN funCall2 CLOSEPAREN
    (70) return -> . RETURN return1 SEMICOLON
    (50) id -> . ID
    (92) while -> . while1 body
    (91) for -> . FOR OPENPAREN ID TWODOTS exp CLOSEPAREN body
    (105) graphfig -> . graphfig1 SEMICOLON
    (106) graphfig -> . graphfig2 SEMICOLON
    (126) graphview -> . graphview0 SEMICOLON
    (127) graphview -> . graphview1 SEMICOLON
    (128) graphview -> . graphview2 SEMICOLON
    (111) graphmove -> . graphmove0 SEMICOLON
    (112) graphmove -> . graphmove1 SEMICOLON
    (113) graphmove -> . graphmove2 SEMICOLON
    (125) repeat -> . REPEAT
    (93) while1 -> . while_w OPENPAREN expression CLOSEPAREN
    (107) graphfig1 -> . CIRCLE unaExp
    (108) graphfig1 -> . SQUARE unaExp
    (109) graphfig2 -> . TRIANGLE dosExp
    (110) graphfig2 -> . RECTANGLE dosExp
    (129) graphview0 -> . HIDE_STAR
    (130) graphview0 -> . SHOW_STAR
    (131) graphview1 -> . COLOR_STAR unaExp
    (132) graphview1 -> . SIZE_STAR unaExp
    (133) graphview2 -> . SETXY dosExp
    (114) graphmove0 -> . HAND_DOWN
    (115) graphmove0 -> . HAND_UP
    (116) graphmove1 -> . GO unaExp
    (117) graphmove1 -> . LEFT unaExp
    (118) graphmove1 -> . RIGHT unaExp
    (119) graphmove1 -> . BACK unaExp
    (120) graphmove2 -> . ARC dosExp
    (94) while_w -> . WHILE

    CLOSEBRACES     reduce using rule 150 (empty -> .)
    IF              shift and go to state 53
    PRINT           shift and go to state 54
    READ            shift and go to state 57
    ID              shift and go to state 62
    RETURN          shift and go to state 63
    FOR             shift and go to state 65
    REPEAT          shift and go to state 74
    CIRCLE          shift and go to state 76
    SQUARE          shift and go to state 77
    TRIANGLE        shift and go to state 78
    RECTANGLE       shift and go to state 79
    HIDE_STAR       shift and go to state 80
    SHOW_STAR       shift and go to state 81
    COLOR_STAR      shift and go to state 82
    SIZE_STAR       shift and go to state 83
    SETXY           shift and go to state 84
    HAND_DOWN       shift and go to state 85
    HAND_UP         shift and go to state 86
    GO              shift and go to state 87
    LEFT            shift and go to state 88
    RIGHT           shift and go to state 89
    BACK            shift and go to state 90
    ARC             shift and go to state 91
    WHILE           shift and go to state 92

    star1                          shift and go to state 40
    stmt                           shift and go to state 41
    empty                          shift and go to state 42
    assignment                     shift and go to state 43
    condition                      shift and go to state 44
    print                          shift and go to state 45
    loop                           shift and go to state 46
    read                           shift and go to state 47
    graphstmt                      shift and go to state 48
    graphr                         shift and go to state 49
    funCall                        shift and go to state 50
    return                         shift and go to state 51
    id                             shift and go to state 52
    while                          shift and go to state 55
    for                            shift and go to state 56
    graphfig                       shift and go to state 58
    graphview                      shift and go to state 59
    graphmove                      shift and go to state 60
    repeat                         shift and go to state 61
    while1                         shift and go to state 64
    graphfig1                      shift and go to state 66
    graphfig2                      shift and go to state 67
    graphview0                     shift and go to state 68
    graphview1                     shift and go to state 69
    graphview2                     shift and go to state 70
    graphmove0                     shift and go to state 71
    graphmove1                     shift and go to state 72
    graphmove2                     shift and go to state 73
    while_w                        shift and go to state 75

state 31

    (6) starI -> star_sign OPENBRACES .

    INT             reduce using rule 6 (starI -> star_sign OPENBRACES .)
    FLOAT           reduce using rule 6 (starI -> star_sign OPENBRACES .)
    CHAR            reduce using rule 6 (starI -> star_sign OPENBRACES .)
    IF              reduce using rule 6 (starI -> star_sign OPENBRACES .)
    PRINT           reduce using rule 6 (starI -> star_sign OPENBRACES .)
    READ            reduce using rule 6 (starI -> star_sign OPENBRACES .)
    ID              reduce using rule 6 (starI -> star_sign OPENBRACES .)
    RETURN          reduce using rule 6 (starI -> star_sign OPENBRACES .)
    FOR             reduce using rule 6 (starI -> star_sign OPENBRACES .)
    REPEAT          reduce using rule 6 (starI -> star_sign OPENBRACES .)
    CIRCLE          reduce using rule 6 (starI -> star_sign OPENBRACES .)
    SQUARE          reduce using rule 6 (starI -> star_sign OPENBRACES .)
    TRIANGLE        reduce using rule 6 (starI -> star_sign OPENBRACES .)
    RECTANGLE       reduce using rule 6 (starI -> star_sign OPENBRACES .)
    HIDE_STAR       reduce using rule 6 (starI -> star_sign OPENBRACES .)
    SHOW_STAR       reduce using rule 6 (starI -> star_sign OPENBRACES .)
    COLOR_STAR      reduce using rule 6 (starI -> star_sign OPENBRACES .)
    SIZE_STAR       reduce using rule 6 (starI -> star_sign OPENBRACES .)
    SETXY           reduce using rule 6 (starI -> star_sign OPENBRACES .)
    HAND_DOWN       reduce using rule 6 (starI -> star_sign OPENBRACES .)
    HAND_UP         reduce using rule 6 (starI -> star_sign OPENBRACES .)
    GO              reduce using rule 6 (starI -> star_sign OPENBRACES .)
    LEFT            reduce using rule 6 (starI -> star_sign OPENBRACES .)
    RIGHT           reduce using rule 6 (starI -> star_sign OPENBRACES .)
    BACK            reduce using rule 6 (starI -> star_sign OPENBRACES .)
    ARC             reduce using rule 6 (starI -> star_sign OPENBRACES .)
    WHILE           reduce using rule 6 (starI -> star_sign OPENBRACES .)
    CLOSEBRACES     reduce using rule 6 (starI -> star_sign OPENBRACES .)


state 32

    (31) function -> FUN functionI function2 . inicia_fun declara_vars function4 termina_fun
    (32) inicia_fun -> . OPENBRACES

    OPENBRACES      shift and go to state 94

    inicia_fun                     shift and go to state 93

state 33

    (34) function2 -> OPENPAREN . function3 CLOSEPAREN
    (35) function3 -> . type ID function5
    (36) function3 -> . empty
    (41) type -> . INT
    (42) type -> . FLOAT
    (43) type -> . CHAR
    (150) empty -> .

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11
    CLOSEPAREN      reduce using rule 150 (empty -> .)

    function3                      shift and go to state 95
    type                           shift and go to state 96
    empty                          shift and go to state 97

state 34

    (29) functionI -> type ID .

    OPENPAREN       reduce using rule 29 (functionI -> type ID .)


state 35

    (30) functionI -> VOID ID .

    OPENPAREN       reduce using rule 30 (functionI -> VOID ID .)


state 36

    (12) vars -> type ID vars1 equals . exp SEMICOLON
    (134) exp -> . term exp1
    (146) term -> . factor term1
    (140) factor -> . vcte
    (141) factor -> . factor1
    (58) vcte -> . cte_int
    (59) vcte -> . cte_float
    (60) vcte -> . cte_char
    (61) vcte -> . id vcte1
    (62) vcte -> . funCall
    (142) factor1 -> . factor2 vcte
    (143) factor1 -> . openP expression closeP
    (67) cte_int -> . CTEINT
    (68) cte_float -> . CTEFLOAT
    (69) cte_char -> . CTECHAR
    (50) id -> . ID
    (95) funCall -> . ID OPENPAREN funCall2 CLOSEPAREN
    (144) factor2 -> . ADDITION
    (145) factor2 -> . SUBSTRACTION
    (138) openP -> . OPENPAREN

    CTEINT          shift and go to state 111
    CTEFLOAT        shift and go to state 112
    CTECHAR         shift and go to state 113
    ID              shift and go to state 98
    ADDITION        shift and go to state 115
    SUBSTRACTION    shift and go to state 116
    OPENPAREN       shift and go to state 114
